--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Gruppo" type="stylesheet.css" rel="stylesheet">
     <title>The website is about Dominique</title>
   </head>
   <body>
